to add alignment fix in k12

--- a/k12/stylesheets/styles.css
+++ b/k12/stylesheets/styles.css
@@ -229,11 +229,11 @@ body {
 }
 
 .student-performance {
-  font-size: 25px;
+  font-size: 20px;
   color: purple;
-  width: 10%;
-  margin-left: 20%;
-  margin-left: 16%;
+  width: 20%;
+  margin-left: 24%;
+  font-family: "DejaVuSans-bold";
   margin-bottom: 30px;
 }
 
@@ -250,6 +250,17 @@ body {
   align-items: center;
   padding: 5px;
   margin-bottom: 20px;
+}
+
+.box-container-2 {
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
+  align-items: center;
+  padding: 5px;
+  margin-bottom: 20px;
+  margin-left: 130px;
+  margin-right: 130px;
 }
 
 .box {
@@ -293,7 +304,7 @@ body {
   justify-content: center;
   align-content: center;
   width: 100%;
-  height: 560px;
+  height: 548px;
 }
 
 .table-parent {
@@ -554,6 +565,8 @@ body {
 
 .air-container {
   margin-top: 25px;
+  margin-left: 30px;
+  text-align: center;
 }
 
 ul li::before {
